--- a/.github/workflows/invitations.yml
+++ b/.github/workflows/invitations.yml
@@ -37,5 +37,5 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: pullreminders/slack-action@master
         with:
-          args: '{\"channel\":\"CF9RK4H89\",\"text\":\"An invitation to join the khulnasoft GitHub org has been sent\"}'
+          args: '{\"channel\":\"C02QDTG7E58\",\"text\":\"An invitation to join the khulnasoft GitHub org has been sent\"}'
           # to the author of: ${{env.URL}}\"}'
